--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Affiliates"
+title: "Finland Travel Guide"
 email: wowthemesnet@gmail.com
 timezone: UTC
 url: "https://finlandguide.github.io"
